// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`will check the matchers and pass 1`] = `
Object {
  "createdAt": Any<Date>,
  "id": Any<Number>,
  "name": "LeBron James",
}
`;

exports[`will fail every time 1`] = `
Object {
  "createdAt": 2021-03-11T14:46:46.518Z,
  "id": 12,
  "name": "LeBron James",
}
`;
